# mobile_sensing

./: CMakeLists.txt  README.md  frame_drawer.h  local_map.h  map_drawer.h  mapping.h  mcgicpIntensity.h  projection_params.h  registration.h  rich_point.h  scan.h  scan_projection.h  spanpose.h  system.h  utils.h
include/: datareader.h  depth_ground_remover.h  frame_drawer.h  map_drawer.h  mapping.h  scan.h  scan_projection.h  system.h  utils.h  viewer.h
include/image_labelers/: abstract_image_labeler.h  dijkstra_image_labeler.h  linear_image_labeler.h
include/image_labelers/diff_helpers/: abstract_diff.h  diff_factory.h
src/: datareader.cpp  depth_ground_remover.cpp  frame_drawer.cpp  map_drawer.cpp  mapping.cpp  mcgicpIntensity.cpp  projection_params.cpp  rich_point.cpp  scan.cpp  scan_projection.cpp  spanpose.cpp  system.cpp  utils.cpp  viewer.cpp
src/image_labelers/: abstract_image_labeler.cpp
src/image_labelers/diff_helpers/: angle_diff.cpp  line_dist_diff.cpp
